# simpgraph

./: README.rst  pyproject.toml  sample  sample.col
.github/workflows/: test.yml
simpgraph/: __init__.py  simpgraph.py
tests/: test_simpgraph.py
